package grupo12.practico.model;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
