package grupo12.practico.models;

public enum DocumentType {
    ID,
    PASSPORT,
}
